style.css
:root {
  --customPadding: 3.5rem;
}

@font-face {
  font-family: "CustomHeading";
  src: url("TheFountainOfWishesRegular-OVxw4.ttf") format("opentype");
}
@font-face {
  font-family: "HeroText";
  src: url("every-run-font/EveryRunRegular-ZV5pK.ttf") format("opentype");
}

a:visited {
  color: crimson;
}
a:link {
  color: cadetblue;
}
a:hover {
  color: white;
}

h1 {
  font-family: "CustomHeading";
  font-size: 50px;
}

h3 {
  font-family: "Herotext";
}

body {
  margin: 0;
  overflow: hidden;
}

.container-for-both-sides {
  display: flex;
  flex-flow: row;
}

.side-image {
  position: relative;
}

.bg-for-logo {
  position: absolute;
  z-index: 1;
  background-color: rgba(0, 0, 0, 0.7);
  width: 50%;
  height: 25%;
  align-items: center;
  align-content: center;
  padding: 0px 25% 0% 25%;
  margin: 30% 0 0 0%;
}

.side-image .overlaped-image {
  align-self: center;
  position: relative;
  bottom: 10%;
}

.side-image > img {
  width: 32rem;
}

.hero-text {
  display: flex;
  flex-direction: column;
  background-color: rgba(186, 186, 186, 0.2);
  padding: 0 0 0 var(--customPadding);
}

.hero-text > h1 + h3 {
  align-items: flex-start;
}

.side-info {
  width: 100%;
}

.get-info-section {
  padding-left: var(--customPadding);
  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.1);
  margin-bottom: 1.6rem;
}

table label {
  font-size: 12px;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  font-weight: 500;
}

td {
  padding: 1rem 5rem 1rem 0rem;
}

input[type="text"],
input[type="email"],
input[type="password"],
input[type="tel"] {
  width: 100%;
  padding: 8px;
  margin-bottom: 10px;
  border: 1px solid rgb(0, 246, 184);
  border-radius: 4px;
}

input[type="text"]:hover,
input[type="email"]:hover,
input[type="password"]:hover,
input[type="tel"]:hover {
  width: 100%;
  margin-bottom: 10px;
  border-color: blue;
  border-radius: 4px;
  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.1);
}
input[type="text"]:focus,
input[type="email"]:focus,
input[type="password"]:focus,
input[type="tel"]:focus {
  width: 100%;
  margin-bottom: 10px;
  border-radius: 4px;
  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.1);
}

input[type="text"]:invalid,
input[type="email"]:invalid,
input[type="password"]:invalid,
input[type="tel"]:invalid {
  width: 100%;
  margin-bottom: 10px;
  border: 1px solid red;
  border-radius: 4px;
}

.side-info > p {
  padding-left: var(--customPadding);
}

input[type="button"] {
  height: 40px;
  width: 180px;
  border: 0 hidden;
  background-color: rgb(93, 93, 226);
  border-radius: 5px;
  margin-left: var(--customPadding);
  margin-bottom: 1em;
  font-weight: bold;
  color: white;
  -webkit-transition: -webkit-transform 0.2s;
  transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
  transition: transform 0.2s, -webkit-transform 0.2s;
}
input[type="button"]:hover {
  height: 40px;
  width: 180px;
  border: 0 hidden;
  background-color: rgb(93, 93, 226);
  border-radius: 5px;
  margin-left: var(--customPadding);
  margin-bottom: 1em;
  font-weight: bold;
  color: white;
  -webkit-transform: scale(1.1);
  transform: scale(1.1);
}

@media (max-width: 1102px) {
  body {
    overflow: scroll;
  }
}

@media (max-width: 1010px) {
  .container-for-both-sides {
    flex-flow: column;
  }
  .side-image > img {
    width: 23rem;
    height: 20rem;
  }
  .overlaped-image {
    align-self: center;
    position: relative;
    width: 15rem;
    margin-top: -2.5em;
  }
  .bg-for-logo {
    position: absolute;
    z-index: 1;
    background-color: rgba(0, 0, 0, 0.7);
    width: 100%;
    height: 40%;
    align-items: center;
    align-content: center;
    padding: 0% 0% 0% 15%;
    margin: 25% 0% 0 0%;
  }
}

